--- a/HireRight/Content/styles.css
+++ b/HireRight/Content/styles.css
@@ -72,53 +72,51 @@ body {
   border-top: 0; }
 
 a {
-  color: #66a3ff; }
+  color: #66a3ff !important; }
 
 a:hover {
-  color: #8533ff; }
+  color: #8533ff !important; }
 
-.navbar-default .navbar-brand,
-.navbar-default .navbar-nav > li > a {
-  color: #000000;
-  font-size: 18pt; }
+.navbar > .container {
+  margin-left: 1%;
+  margin-right: 1%;
+  padding: 0; }
 
-.navbar-default .navbar-brand:hover,
-.navbar-default .navbar-nav > li > a:hover {
-  color: white;
+.navbar-brand,
+.navbar-nav > li > a {
+  color: #000000 !important;
+  font-size: 14pt !important; }
+
+.navbar-brand:hover,
+.navbar-nav > li > a:hover {
+  color: white !important;
   text-shadow: #000000 2px 0px 1px; }
 
-.navbar-default .navbar-nav > li > a.current {
-  color: white; }
+.navbar-nav > li > a.current {
+  color: white !important; }
 
-.navbar-default .navbar-nav > li > a.current:hover {
-  color: #000000;
+.navbar-nav > li > a.current:hover {
+  color: #000000 !important;
   text-shadow: white 2px 0px 1px; }
 
-.navbar-default .navbar-brand {
+.navbar-inverse .navbar-brand {
   font-size: 18pt;
   font-weight: bold; }
 
-@media (max-width: 1550px) {
-  .navbar-toggle {
-    display: block; }
-  .navbar-header {
-    float: none; }
-  .navbar-collapse {
-    border-top: 1px solid transparent;
-    box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1); }
-  .navbar-nav {
-    float: none !important;
-    margin: 7.5px -15px; }
-  /*
-
-    .navbar-nav > li {
-        float: none;
-    }
-
-    .navbar-nav > li > a {
-        padding-top: 10px;
-        padding-bottom: 10px;
-    }*/ }
+@media (min-width: 768px) and (max-width: 1252px) {
+  div.navbar-collapse.collapse {
+    display: none !important; }
+  button.navbar-toggle {
+    display: block !important;
+    right: 1px;
+    position: absolute; }
+  .navbar-collapse.collapse.in {
+    display: block !important; }
+  .collapsing {
+    overflow: hidden !important; }
+  ul.nav.navbar-nav > li {
+    width: 100%;
+    font-size: 18pt !important; } }
 
 hr {
   height: 3px;
